# sauropod

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .vale.ini  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deny.toml  package-lock.json  package.json  redocly.yaml
.cargo/: config.toml
.devcontainer/: Dockerfile  config.toml  devcontainer.json  platform_specific_install.py
.github/: dependabot.yml  renovate.json
.sqlx/: query-01685a75944bd1a46d3f5b33153b9c9d482d41e9266e0e239fbd1c0c8be364fb.json  query-05055da97ea76c690ba6845e68aad12f6baaf221576457c6e2ed0cf250ff1102.json  query-05990c47e32ba93596a9ae8e0340c5569226671dec4a2e3227fd79f764d9efe3.json  query-05cc7aa649ea57c12c4948607a668a4ac5ce5427148cc320a8eabdba7bc9d5cc.json  query-0b7d8b9bd1ce14baf774dd55e64b548a7aa89cada0ef3905eaf0f5ccbaecd03d.json  query-16efe8267accaebfaea50ade5480b23cf813d3e7e6f1cd53d6c171e58b511e93.json  query-20bba20ea72a4a038c2dfc2be3ffaf9a00fcc9b8a3ea59d3958b393d073026a1.json  query-2152b96a4c91d0c16c3ef38315a0b80dfab44d696a9a8450d3e3175337af34d2.json  query-2647d7a7443d98ac0b8633a2d522a0f8e48f9b37295d0cc1a593f6ea844e9f3b.json  query-2d5ee42b2bb97e45d6a772400fc7a484ccafcb7fc01f0267fc0b7eed0fe362e0.json  query-2f4b3c9c94ae840fae65632726da29b951bfcd19b6566d7ca8abb81724a1f645.json  query-32d00bec605d8700c7f4f24037ebb56b911be1a864c9b95c776efaab71a4bd44.json  query-38059d829ad3c48fc48b90f68e73ad09dbc3a2e24430f6e72ecb0c867bd980d9.json  query-3846ce33097549412d4809e0223a05be40135e46c95d0f82463ef35e44b8de34.json  query-3b897cf0a59c3d516cb18de9a1214dde58eb6fc5501dc88b50bd391da5042bbe.json  query-43aeeafc5a6fea50cc443a510c63c08f0f6b869b0f5b581f21533c4f7db8c920.json  query-44ef9c1b27aa2f25c69779f5f0e8556118ae1ede223d5caf10ef4b960a072e6c.json  query-490ef7348c07e4ba7e972fe2cbe038a7a17214c0a1ad0d62b0414e60b349eccd.json  query-5ff8a6d072ecafaa7e95681db4e83446adebc0aac09deb24a268b17d1d302683.json  query-69835c2d158a68bea62e38f29c5cf62d6546dc02c19f35f1c949ed58a6d532a7.json  query-713548499df77ffa77ae878d1fcff3b6febccdf7ede0819bcae60137ca5d5177.json  query-7e5b7a2c23001896fa9874d3946dfb4be975f2d37111e298d59292e65a2de3dd.json  query-84b59e84c9ec4bd6804c0bf25fa48956c9855ea1b7982b54d969cf460d645b7f.json  query-85b6a62299cff0d27da44053c41285ad9767abb1195c30b9949efc06974f2d35.json  query-91440d8015762ac5cef78b7fff43f5f86c200a055d6209ee53e7de76d2d7b3b4.json  query-9aebb00a2f5c68648b83076d1808656eb201f5ad445a722f0b33c021bdeaffc3.json  query-9e0315f391e070488f82216e970439e1de5ec9359af1c10eb748253d8eff291f.json  query-9f19233c494aa59ee5f3395f1714e129c0ed055c2c6a99db014ebda0f9e63e92.json  query-a69945394e2378f6131a3756484045fde723d86f4deeaaf84d52b82028fc1977.json  query-a9f0ed38e1e07ada9fed22684ce02c4b9a57dd8937354b527e847df307758f94.json  query-ad5aaef8aa178ca232d06c0de12f47dc0a1c5f9f1d95150bc1d12edaa9d62f56.json  query-b15077a1a656c53a9b0ea152fd7d6237ca2aa1d9ea51bcfe1b6076b3b310fc81.json  query-c5d7dfe86089f5060e36ca46b0993a952e879fd2e13a9aa7ccf559429c3de3e6.json  query-dd154e51b710169e16a2dfc4a52487a53ac779aa3f4926c8e9900cdbcc01fff8.json  query-e958bfbe8c83f35d17daa2fc3c08fcbd39e644b808ed125c53c6586516ebfa5f.json  (+2 more)
.zed/: debug.json
api/: LICENSE  (+4 more)
bindings/llama-cpp/: Cargo.toml
bindings/llama-cpp-sys/: Cargo.toml  build.rs  wrapper.hh
bindings/llama-cpp-sys/src/: lib.rs
bindings/llama-cpp/src/: inference_thread.rs  lib.rs  mtmd.rs
bindings/onnxruntime/: Cargo.toml
bindings/onnxruntime-sys/: Cargo.toml  build.rs  wrapper.hh
bindings/onnxruntime-sys/src/: lib.rs
bindings/onnxruntime/src/: helpers.rs  lib.rs  traits.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs  snac.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  model_source.rs
crates/conversation/: Cargo.toml
crates/conversation/src/: lib.rs
crates/core-tools/: Cargo.toml
crates/core-tools/src/: fetch.rs  lib.rs  notify.rs
crates/database/: Cargo.toml
crates/database/migrations/: 0000_base.sql  1_base.sql  2_run.sql
crates/database/src/: generated.rs  lib.rs  schema.rs
crates/database/src/schemas/: mod.rs  task.rs  task_run.rs  user.rs
crates/gguf/: Cargo.toml
crates/gguf/src/: lib.rs
crates/global-state/: Cargo.toml
crates/global-state/src/: lib.rs
crates/http/: Cargo.toml  build.rs
crates/http/src/: auth.rs  generated.rs  lib.rs  ui_routes.rs
crates/huggingface/: Cargo.toml
crates/huggingface/src/: lib.rs
crates/inference-audio/: Cargo.toml
crates/inference-audio/src/: lib.rs  routes.rs
crates/inference-engine/: Cargo.toml
crates/inference-engine-api/: Cargo.toml
crates/inference-engine-api/src/: lib.rs  response_stream.rs  sampling.rs
crates/inference-engine/src/: lib.rs  model_file_selector.rs
crates/inference-http/: Cargo.toml
crates/inference-http/src/: lib.rs
crates/inference-realtime/: Cargo.toml
crates/inference-realtime/src/: audio.rs  defaults.rs  lib.rs  model_calling.rs  realtime.rs  realtime_webrtc.rs  socket.rs  transcription.rs
crates/inference-responses/: Cargo.toml
crates/inference-responses/queries/: parent_chain.sql
crates/inference-responses/src/: lib.rs  routes.rs
crates/inference-server/: Cargo.toml
crates/inference-server/src/: lib.rs  main.rs
crates/inference-thread/: Cargo.toml
crates/inference-thread/src/: lib.rs
crates/llm-inference/: Cargo.toml
crates/llm-inference/src/: engine.rs  extra_providers_api.rs  interface.rs  lib.rs  openai_api.rs
crates/llm-inference/src/prompt_formatter/: default.rs  gemma.rs  mod.rs
crates/logging/: Cargo.toml
crates/logging/src/: in_memory.rs  lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/model-loading/: Cargo.toml
crates/model-loading/src/: lib.rs
crates/openai-api/: Cargo.toml
crates/openai-api/src/: generated.rs  generated_tests.rs  helpers.rs  interfaces.rs  lib.rs  test_utils.rs  tests.rs
crates/profiling/: Cargo.toml
crates/profiling/src/: lib.rs
crates/prompt-templates/: Cargo.toml
crates/prompt-templates/src/: lib.rs
crates/schemas/: Cargo.toml  LICENSE
crates/schemas/src/: lib.rs  observability.rs  task.rs  workflow.rs
(+117 files in other folders)
