[workspace]
resolver = "2"
members = [
    "crates/*",
    "tools/*",
]

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Sauropod <contact@sauropod.io>"]
publish = false
repository = "https://github.com/sauropod-io/sauropod"
homepage = "https://sauropod.io"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8", features = ["json", "http1", "http2"] }
chrono ={ version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["env"]}
config = {version = "0.15.11", default-features = false, features = ["toml"]}
directories = "6.0.0"
futures = "0.3.31"
jsonschema = { version = "0.29.1", default-features = false }
nom = { version = "8.0.0", default-features = false, features = ["std"] }
reqwest = { version = "0.12.14", features = ["json"] }
rmcp = { version = "0.1.5", default-features = false, features = ["base64", "macros", "client", "transport-io", "transport-sse", "transport-child-process"]}
schemars = "1.0.0-alpha.17"
serde = {version = "1.0.219", features = ["serde_derive"]}
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45", features = ["full"] }
toml = "0.8.22"
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sqlx = { version = "0.8.5", default-features = false, features = ["derive", "chrono", "runtime-tokio", "migrate", "json", "macros", "sqlite"] }
sqlx-cli = { version = "0.8.5" }

[profile.optimized-release]
inherits = "release"
lto = "fat"
opt-level = 3
panic = "abort"

# Speed up sqlx-macros for incremental builds
[profile.dev.package.sqlx-macros]
opt-level = 3
