[workspace]
resolver = "2"
members = ["crates/*", "bindings/*", "tools/*"]


[workspace.package]
version = "0.0.2"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Sauropod Inc. <contact@sauropod.io>"]
publish = false
repository = "https://github.com/sauropod-io/sauropod"
homepage = "https://sauropod.io"

[workspace.dependencies]
anyhow = "1.0.98"
assert-json-diff = "2.0.2"
async-stream = "0.3.6"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["ws", "json"] }
base64 = "0.22.1"
bindgen = "0.72.0"
byteorder = "1.5.0"
bytes = "1.10.1"
cc = "1.2.30"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
cmake = "0.1.54"
config = { version = "0.15.12", default-features = false, features = ["toml"] }
directories = "6.0.0"
flate2 = "1.1.2"
futures = "0.3.31"
futures-core = "0.3.31"
hf-hub = { version = "0.4.3", features = ["tokio"] }
image = { version = "0.25.6", default-features = false, features = [
    "jpeg",
    "png",
] }
indicatif = "0.17.11"
libc = "0.2.174"
minijinja = { version = "2.11.0", features = ["loader", "builtins", "json"] }
minijinja-contrib = { version = "2.11.0", features = ["pycompat"] }
pin-project = "1.1.10"
pkg-config = "0.3.32"
rand = "0.9.2"
regex = "1.11.1"
rubato = "0.16.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yml = "0.0.12"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
sqlx-cli = { version = "0.8.6", default-features = false, features = [
    "sqlite",
] }
symphonia = { version = "0.5.4", features = ["wav"] }
tar = "0.4.44"
thiserror = "2.0.12"
tokenizers = { version = "0.21.4", default-features = false, features = [
    "fancy-regex",
    "unstable_wasm",
] }
tokio = { version = "1.47.0", features = ["full"] }
tokio-stream = "0.1.17"
tracy-client = { version = "0.18.2", default-features = false, features = [
    "code-transfer",
    "context-switch-tracing",
    "debuginfod",
    "fibers",
    "only-localhost",
    "sampling",
    "system-tracing",
] }
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "broadcast",
    "callstack-inlines",
    "debuginfod",
    "fibers",
    "only-localhost",
    "system-tracing",
] }
libloading = "0.8.8"
tower-http = { version = "0.6.4", features = [
    "catch-panic",
    "cors",
    "request-id",
    "sensitive-headers",
    "set-header",
    "trace",
] }
tempfile = "3.20.0"
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-perfetto = "0.1.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ureq = { version = "3.0.12", features = ["platform-verifier"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6", features = ["axum"] }
uuid = { version = "1.3", features = ["v4"] }
webrtc = "0.13.0"
zip = "5.0.0"

[profile.optimized-release]
codegen-units = 2
inherits = "release"
lto = "thin"
opt-level = 3
panic = "abort"

# Speed up sqlx-macros for incremental builds
[profile.dev.package.sqlx-macros]
opt-level = 3
# Speed up tokenizers since they're slow in debug mode
[profile.dev.package.tokenizers]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3
