[package]
name = "sauropod-llama-cpp"
license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
cuda = ["llama-cpp-sys/cuda"]
cuda-multiple-arches = ["cuda", "llama-cpp-sys/cuda-multiple-arches"]
vulkan = ["llama-cpp-sys/vulkan"]

[dependencies]
llama-cpp-sys.path = "../llama-cpp-sys"
sauropod-config.path = "../../crates/config"
sauropod-gguf.path = "../../crates/gguf"
sauropod-inference-engine-api.path = "../../crates/inference-engine-api"
sauropod-openai-api.path = "../../crates/openai-api"
sauropod-output-parser.path = "../../crates/output-parser"
sauropod-prompt-templates.path = "../../crates/prompt-templates"

anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
futures-core.workspace = true
indicatif.workspace = true
libc.workspace = true
minijinja.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing.workspace = true
