[package]
name = "sauropod-onnxruntime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
onnxruntime-sys.path = "../onnxruntime-sys"

thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
