[package]
name = "sauropod-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sauropod-onnxruntime.path = "../../bindings/onnxruntime"

anyhow.workspace = true
tracing.workspace = true
