[package]
name = "sauropod-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
sauropod-schemas = { path = "../schemas" }

anyhow.workspace = true
config.workspace = true
directories.workspace = true
serde.workspace = true
toml.workspace = true
