[package]
name = "sauropod-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = []
json_schema = ["schemars"]

[dependencies]
sauropod-schemas = { path = "../schemas" }

anyhow.workspace = true
config.workspace = true
directories.workspace = true
schemars = {workspace = true, optional = true}
serde.workspace = true
toml.workspace = true
