[package]
name = "sauropod-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
config.workspace = true
directories.workspace = true
serde.workspace = true
