[package]
name = "sauropod-conversation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sauropod-openai-api.path = "../openai-api"

thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
