[package]
name = "sauropod-database"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
sauropod-schemas = { path = "../schemas", features = ["json_schema"] }

anyhow.workspace = true
sqlx.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
