[package]
name = "sauropod-gguf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
sauropod-huggingface = { path = "../huggingface" }
