[package]
name = "sauropod-http"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
sauropod-schemas = { path = "../schemas" }

anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true

[build-dependencies]
anyhow.workspace = true
