[package]
name = "sauropod-huggingface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
hf-hub.workspace = true
serde.workspace = true
