[package]
name = "sauropod-inference-engine-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sauropod-config.path = "../config"
sauropod-openai-api.path = "../openai-api"
sauropod-output-parser.path = "../output-parser"
sauropod-prompt-templates.path = "../prompt-templates"

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-core.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
uuid.workspace = true
