[package]
name = "sauropod-inference-realtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sauropod-conversation.path = "../conversation"
sauropod-global-state.path = "../global-state"
sauropod-config.path = "../config"
sauropod-inference-engine-api.path = "../inference-engine-api"
sauropod-inference-engine.path = "../inference-engine"
sauropod-inference-http.path = "../inference-http"
sauropod-onnxruntime.path = "../../bindings/onnxruntime"
sauropod-openai-api.path = "../openai-api"
sauropod-prompt-templates.path = "../prompt-templates"
sauropod-stt.path = "../stt"
sauropod-vad.path = "../vad"

anyhow.workspace = true
axum.workspace = true
base64.workspace = true
byteorder.workspace = true
chrono.workspace = true
futures.workspace = true
hf-hub.workspace = true
rand.workspace = true
rubato.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true
webrtc.workspace = true

[dev-dependencies]
sauropod-hf-test-helpers.path = "../../tools/hf-test-helpers"
sauropod-tracing-test-helpers.path = "../../tools/tracing-test-helpers"

assert-json-diff.workspace = true
bytes.workspace = true
symphonia.workspace = true
