[package]
name = "sauropod-llm-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sauropod-config = { path = "../config" }
sauropod-tool-spec = { path = "../tool-spec" }
sauropod-schemas = { path = "../schemas" }
sauropod-links = { path = "../links" }

anyhow.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
