[package]
name = "sauropod-logging"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sauropod-config = { path = "../config" }

serde_json.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
