[package]
name = "sauropod-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sauropod-config = { path = "../config" }

anyhow.workspace = true
futures.workspace = true
rmcp.workspace = true
tokio.workspace = true
tracing.workspace = true
