[package]
name = "sauropod-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sauropod-config = { path = "../config" }
sauropod-task-context = { path = "../task-context" }
sauropod-schemas = { path = "../schemas" }

anyhow.workspace = true
futures.workspace = true
rmcp.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
