[package]
name = "sauropod-model-loading"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sauropod-huggingface.path = "../huggingface"
sauropod-config.path = "../config"
sauropod-inference-engine-api.path = "../inference-engine-api"
sauropod-inference-engine.path = "../inference-engine"
sauropod-onnxruntime.path = "../../bindings/onnxruntime"
sauropod-stt.path = "../stt"
sauropod-tts.path = "../tts"
sauropod-vad.path = "../vad"
sauropod-openai-api.path = "../openai-api"
sauropod-prompt-templates.path = "../prompt-templates"

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-core.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
