[package]
name = "sauropod-prompt-templates"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sauropod-openai-api.path = "../openai-api"

anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
minijinja.workspace = true
