[package]
name = "sauropod-prompt-templates"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sauropod-openai-api.path = "../openai-api"

anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
image.workspace = true
minijinja-contrib.workspace = true
minijinja.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
