[package]
name = "sauropod-schemas"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
authors.workspace = true
publish.workspace = true

[features]
default = []
json_schema = ["schemars"]

[dependencies]
schemars = {workspace = true, optional = true}
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
